--- a/react/package.json
+++ b/react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "@apollo/react-components": "^3.1.5",
     "@apollo/react-hooks": "^3.0.0",
     "apollo-boost": "^0.4.8",
