--- a/react/package.json
+++ b/react/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^3.4.3",
+    "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
