Added loading screen

--- a/react/package.json
+++ b/react/package.json
@@ -20,6 +20,7 @@
     "react-data-table-component": "^6.9.8",
     "react-dom": "^16.9.0",
     "react-images-upload": "^1.2.8",
+    "react-loading-skeleton": "^2.1.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.0",
