--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,14 +2,19 @@ apiVersion: skaffold/v1beta15
 kind: Config
 build:
   artifacts:
-    - image: docker-registry.kubeshare.com/nodejs/kubeshare_frontend
+    - image: registry.demodash.com/react/demodash_store
       context: react
+      docker:
+        buildArgs:
+          REACT_APP_API_HOST: 'https://api.demodash.com'
+          REACT_APP_API_MEDIA: 'https://demodash-assets.sfo2.digitaloceanspaces.com'
+          REACT_APP_API_STATIC_BUCKET: 'demodash-assets'
+          REACT_APP_RECAPTCHA_PUBLIC_KEY: '6LeitucZAAAAAN98ZuVuUntY6iypIuhaYZTjH5gp'
   tagPolicy:
     gitCommit:
   local:
     useBuildkit: true
-
 deploy:
   kubectl:
     manifests:
-    - k8s/general/*
+    - k8s-react/*
